feat: add dynamic student filtering with JPA Specification
- Add JpaSpecificationExecutor to StudentRepository
- Add StudentSpecification with optional predicates for academicYearId, shiftId, classId, genderSectionId, sectionId, groupId
- Add getFilteredStudents() to StudentService and StudentServiceImpl
- Add GET /students/filter endpoint with optional query params